Version 1.1.0
* Validates support for 1.21.4
* Adds knockback to end portals, and fixes stuttery nether portal knockback
* Adds resistance to players during knockback for 10 seconds to prevent fall damage, being dumped into lava, etc. as a result of an unexpected change in trajectory
* Fixes bug where autocomplete would only work if a player did *not* have permission to use the commands